Menambahkan og untuk ngeprank :V

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="index.js"></script>
+    <meta name="og:url" content="https://s.lazada.co.id/s.hIsjb">
+    <meta name="og:title"
+        content="Check out [PRE-ORDER, Pengiriman Mulai 7 FEB 2023] COOCA...Diskon 62%!Hanya Rp1.549.000!Dapatkan di Lazada sekarang!">
+    <meta name="og:type" content="product">
+    <meta name="og:description" content="Diskon 62%!Hanya Rp1.549.000!Dapatkan di Lazada Sekarang!">
+    <meta name="og:image"
+        content="https://lzd-img-global.slatic.net/g/p/2376b78cee20ecb1e4b70bc3cbc1286d.jpg_720x720q80.jpg_.webp">
 </head>
 
 <body id="t" class="offline">
