--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title>Riansaurus</title>
+    <title>RianT-Rex</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script src="index.js"></script>
     <meta name="og:url" content="https://s.lazada.co.id/s.hIsjb">
-    <meta name="og:title"
-        content="Check out [PRE-ORDER, Pengiriman Mulai 7 FEB 2023] COOCA...Diskon 62%!Hanya Rp1.549.000!Dapatkan di Lazada sekarang!">
-    <meta name="og:type" content="product">
-    <meta name="og:description" content="Diskon 62%!Hanya Rp1.549.000!Dapatkan di Lazada Sekarang!">
+    <meta name="og:title" content="RianT-Rex">
+    <meta name="og:type" content="game">
+    <meta name="og:description" content="Mainkan gamenya dan dapatkan 5 juta poin di RianT-Rex!">
     <meta name="og:image"
-        content="https://lzd-img-global.slatic.net/g/p/2376b78cee20ecb1e4b70bc3cbc1286d.jpg_720x720q80.jpg_.webp">
+        content="https://firebasestorage.googleapis.com/v0/b/bacod-studio.appspot.com/o/1650436528695-crcccc.png?alt=media&token=b9f32d84-cae0-48a9-b2f2-33e14a207260">
 </head>
 
 <body id="t" class="offline">
